--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-API_ID=# get this value from my.telegram.org
+API_ID=# 27776767
 
-API_HASH= # get this value from my.telegram.org
+API_HASH= # e7b0d8f7b037df9ff8b300816e90080b
 
-BOT_TOKEN= # get this value from @Botfather
+BOT_TOKEN= # 6875632239:AAFRqeZISar3e7INXl1hwE2avMfJT89SIx4
 
-MONGO_DB_URI= # get this value from mongodb.com
+MONGO_DB_URI= # mongodb+srv://maticnemanja:kucingkawin@cluster0.qhwwh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-SUDO_USER = # User IDs
+SUDO_USER = # 7168077417
